Bug 2026856 - Hide coverage/diagram controls button on stuck breadcrumbs.

--- a/static/css/mozsearch.css
+++ b/static/css/mozsearch.css
@@ -833,6 +833,10 @@ tr.after-context-line + tr.before-context-line {
 }
 .breadcrumbs.stuck {
   white-space: nowrap;
+
+  .breadcrumbs-extra-button {
+    display: none !important;
+  }
 }
 
 #tree-switcher {
